[project]
name = "cc-use"
version = "0.1.0"
description = "Adaptive observation for terminal-based coding agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cc-use = "cc_use.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
